src/test/ui/const-generics/defaults/simple-defaults.min.stderr
error: using type defaults and const parameters in the same parameter list is currently not permitted
  --> $DIR/simple-defaults.rs:8:40
   |
LL | struct FixedOutput<'a, const N: usize, T = u32> {
   |                                        ^^^^^^^

error: aborting due to previous error

